manifests/applications/op1st-gitops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: "Operate First GitOps"
    openshift.io/cluster-monitoring: "true"
  labels:
    b4mad.operate-first.cloud/owner: goern.b4mad.net
  name: op1st-gitops
