manifests/applications/op1st-gitops/argocd.operate-first.cloud.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.allow-http: "false"
  name: argocd-operate-first-cloud
  namespace: op1st-gitops
spec:
  ingressClassName: openshift-default
  rules:
    - host: argocd.operate-first.cloud
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - argocd.operate-first.cloud
      secretName: argocd-operate-first-cloud
