manifests/applications/op1st-gitops/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: tasks-deny-all
spec:
  podSelector:
    matchLabels:
      tekton.dev/memberOf: tasks
  ingress: []
---
